// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component/Button Button Add 1`] = `
<button
  className="Button-pzvjfl-0 fMftLg"
>
  Hinzufügen
</button>
`;

exports[`Storyshots Component/Button Button Order 1`] = `
<button
  className="Button-pzvjfl-0 fMftLg"
>
  Bestellen
</button>
`;

exports[`Storyshots Component/Header Header Home 1`] = `
<header
  className="Header__Container-sc-17wre1r-0 hRODWv"
>
  <h1
    className="Header__Headline-sc-17wre1r-1 duXfVz"
  >
    Home
  </h1>
</header>
`;

exports[`Storyshots Component/ProductOverviewCard Card Medium Product Default 1`] = `
<div
  className="CardMediumProduct__Container-sc-1k0olew-0 ZTIcV"
>
  <h2
    className="CardMediumProduct__Headline-sc-1k0olew-1 tVeoE"
  >
    Blaue Box
  </h2>
  <div
    className="CardMediumProduct__CardImage-sc-1k0olew-2 UUAMV"
  >
    <img
      alt="Blaue Box"
      src="https://via.placeholder.com/250"
    />
  </div>
  <article
    className="CardMediumProduct__CardDescription-sc-1k0olew-3 eagpQL"
  >
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa ...
  </article>
  <aside
    className="CardMediumProduct__CardPrice-sc-1k0olew-4 caGHPH"
  >
    € 
    328.5
  </aside>
</div>
`;

exports[`Storyshots Component/ProductOverviewCard Card Small Product Default 1`] = `
<div
  className="CardSmallProduct__Container-ers87-0 hxvxfz"
>
  <div
    className="CardSmallProduct__CardImage-ers87-4 SWhgG"
  >
    <img
      alt="Blaue Box"
      src="https://via.placeholder.com/150"
    />
  </div>
  <div
    className="CardSmallProduct__DescriptionContainer-ers87-1 gpzOcx"
  >
    <h2
      className="CardSmallProduct__Headline-ers87-3 kJiiSK"
    >
      Blaue Box
    </h2>
    <div
      className="CardSmallProduct__DetailsContainer-ers87-2 jNxLiR"
    >
      <aside
        className="CardSmallProduct__CardPrice-ers87-5 cqKgG"
      >
        € 
        328.5
      </aside>
      <aside
        className="CardSmallProduct__CardQuantity-ers87-6 gqVhdb"
      >
        x 
        1
      </aside>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component/Searchbar Search 1`] = `
<input
  className="Searchbar-sc-1bd71k1-0 fMbmEz"
  placeholder="Suche"
/>
`;

exports[`Storyshots Pages/Categories Categories 1`] = `
Array [
  <header
    className="Header__Container-sc-17wre1r-0 hRODWv"
  >
    <h1
      className="Header__Headline-sc-17wre1r-1 duXfVz"
    />
  </header>,
  <div
    className="NavbarBottom__Container-sc-17hvsnk-0 guYphZ"
  >
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 klXJLp"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/product-overview"
      onClick={[Function]}
    >
      Suche
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/checkout"
      onClick={[Function]}
    >
      Warenkorb
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/profile"
      onClick={[Function]}
    >
      Profil
    </a>
  </div>,
]
`;

exports[`Storyshots Pages/CheckoutPage Standard 1`] = `
Array [
  <h1>
    Checkout
  </h1>,
  <div
    className="NavbarBottom__Container-sc-17hvsnk-0 guYphZ"
  >
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 klXJLp"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/product-overview"
      onClick={[Function]}
    >
      Suche
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/checkout"
      onClick={[Function]}
    >
      Warenkorb
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/profile"
      onClick={[Function]}
    >
      Profil
    </a>
  </div>,
]
`;

exports[`Storyshots Pages/CustomersOverviewPage Standard 1`] = `
Array [
  <h1>
    Customers Overview
  </h1>,
  <div
    className="NavbarBottom__Container-sc-17hvsnk-0 guYphZ"
  >
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 klXJLp"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/product-overview"
      onClick={[Function]}
    >
      Suche
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/checkout"
      onClick={[Function]}
    >
      Warenkorb
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/profile"
      onClick={[Function]}
    >
      Profil
    </a>
  </div>,
]
`;

exports[`Storyshots Pages/LoadingPage Standard 1`] = `
Array [
  <h1>
    Loading
  </h1>,
  <div
    className="NavbarBottom__Container-sc-17hvsnk-0 guYphZ"
  >
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 klXJLp"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/product-overview"
      onClick={[Function]}
    >
      Suche
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/checkout"
      onClick={[Function]}
    >
      Warenkorb
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/profile"
      onClick={[Function]}
    >
      Profil
    </a>
  </div>,
]
`;

exports[`Storyshots Pages/OrderConfirmationPage Standard 1`] = `
Array [
  <h1>
    Order Confirmation
  </h1>,
  <div
    className="NavbarBottom__Container-sc-17hvsnk-0 guYphZ"
  >
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 klXJLp"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/product-overview"
      onClick={[Function]}
    >
      Suche
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/checkout"
      onClick={[Function]}
    >
      Warenkorb
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/profile"
      onClick={[Function]}
    >
      Profil
    </a>
  </div>,
]
`;

exports[`Storyshots Pages/ProductPage Standard 1`] = `
Array [
  <h1>
    Product Page
  </h1>,
  <div
    className="NavbarBottom__Container-sc-17hvsnk-0 guYphZ"
  >
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 klXJLp"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/product-overview"
      onClick={[Function]}
    >
      Suche
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/checkout"
      onClick={[Function]}
    >
      Warenkorb
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/profile"
      onClick={[Function]}
    >
      Profil
    </a>
  </div>,
]
`;

exports[`Storyshots Pages/ProductsOverviewPage Standard 1`] = `
Array [
  <h1>
    Products Overview
  </h1>,
  <div
    className="NavbarBottom__Container-sc-17hvsnk-0 guYphZ"
  >
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 klXJLp"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/product-overview"
      onClick={[Function]}
    >
      Suche
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/checkout"
      onClick={[Function]}
    >
      Warenkorb
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/profile"
      onClick={[Function]}
    >
      Profil
    </a>
  </div>,
]
`;

exports[`Storyshots Pages/ProfilePage Standard 1`] = `
Array [
  <h1>
    Profile
  </h1>,
  <div
    className="NavbarBottom__Container-sc-17hvsnk-0 guYphZ"
  >
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 klXJLp"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/product-overview"
      onClick={[Function]}
    >
      Suche
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/checkout"
      onClick={[Function]}
    >
      Warenkorb
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/profile"
      onClick={[Function]}
    >
      Profil
    </a>
  </div>,
]
`;
